<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:label="@string/app_name"
    tools:context=".WishBucketActivity" >

    <TextView
        android:id="@android:id/empty"
        android:textColor = "#564242"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_lists"
        android:layout_alignParentTop="true"
        android:paddingLeft="5dp" />
        
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:id="@+id/addWishButton"
        android:layout_centerHorizontal="true"
 
        android:layout_marginBottom="5dp"
        android:onClick="addNewWish"
        android:background="@drawable/addwish"
        android:src="@drawable/addwish"
        android:layout_alignParentBottom="true"
     />
    
    <TextView 
       	android:id="@+id/list_instructions"
       	android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
       	android:text="@string/list_instructions" 
       	android:visibility="gone"
       	android:layout_gravity="center"
       	android:layout_marginTop="8dp"
       	android:layout_marginBottom="8dp"
       	android:textColor="#000000"
       	android:layout_above="@id/addWishButton"
       	android:layout_centerHorizontal="true" />
    
    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_above="@id/list_instructions"
        >
    </ListView>
</RelativeLayout>